--- a/modules/webapp/.settings/org.eclipse.wst.common.component
+++ b/modules/webapp/.settings/org.eclipse.wst.common.component
@@ -6,6 +6,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/maven-shared-archive-resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-sources/annotations"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/kernel/conf"/>
         <dependent-module archiveName="axis2-jibx-1.8.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/axis2-jibx/axis2-jibx">
             <dependency-type>uses</dependency-type>
         </dependent-module>
